# jso

./: .clang-format  .editorconfig  .gitignore  LICENSE  Makefile.am  README.md  TODO.md  autogen.sh  configure.ac  debug-configure.sh  format.sh  run-manual-tests.sh  run.sh
.github/workflows/: ci.yml
docs/: Doxyfile
src/: Makefile  Makefile.am  jso.c  jso.h  jso_array.c  jso_array.h  jso_assert.h  jso_basics.h  jso_bitset.h  jso_builder.c  jso_builder.h  jso_cli.c  jso_cli.h  jso_dbg.c  jso_dbg.h  jso_dg_dtoa.c  jso_dg_dtoa.h  jso_encoder.c  jso_encoder.h  jso_error.c  jso_error.h  jso_ht.c  jso_ht.h  jso_io.h  jso_mm.h  jso_number.c  jso_number.h  jso_object.c  jso_object.h  jso_parser.c  jso_parser.h  jso_parser.y  jso_parser_hooks.h  jso_pointer.h  jso_re.c  jso_re.h  jso_scanner.h  jso_scanner.re  jso_schema.c  jso_schema.h  (+9 more)
src/io/: jso_file.c  jso_file.h  jso_io.c  jso_io_file.c  jso_io_file.h  jso_io_memory.c  jso_io_memory.h  jso_io_string.c  jso_io_string.h
src/parser/: jso_parser.c  jso_parser_hooks_decode.c  jso_parser_hooks_decode.h  jso_parser_hooks_decode_schema.c  jso_parser_hooks_decode_schema.h  jso_parser_hooks_validate.c  jso_parser_hooks_validate.h
src/pointer/: jso_pointer.c  jso_pointer.h  jso_pointer_cache.c  jso_pointer_error.c  jso_pointer_error.h
src/schema/: jso_schema.c  jso_schema_array.c  jso_schema_array.h  jso_schema_data.c  jso_schema_data.h  jso_schema_error.c  jso_schema_error.h  jso_schema_keyword.c  jso_schema_keyword.h  jso_schema_keyword_array.c  jso_schema_keyword_array.h  jso_schema_keyword_freer.c  jso_schema_keyword_freer.h  jso_schema_keyword_object.c  jso_schema_keyword_object.h  jso_schema_keyword_regexp.c  jso_schema_keyword_regexp.h  jso_schema_keyword_scalar.c  jso_schema_keyword_scalar.h  jso_schema_keyword_single.c  jso_schema_keyword_single.h  jso_schema_keyword_types.c  jso_schema_keyword_types.h  jso_schema_keyword_union.c  jso_schema_keyword_union.h  jso_schema_reference.c  jso_schema_reference.h  jso_schema_uri.c  jso_schema_uri.h  jso_schema_validation.c  jso_schema_validation_array.c  jso_schema_validation_array.h  jso_schema_validation_common.c  jso_schema_validation_common.h  jso_schema_validation_composition.c  jso_schema_validation_composition.h  jso_schema_validation_error.c  jso_schema_validation_error.h  jso_schema_validation_object.c  jso_schema_validation_object.h  (+21 more)
tests/: Makefile.am  array_basic.json  error_object.json  object_array.json  object_tree.json  test.json  tokens.js  utf.js
tests/errors/: array01.json  escape01.json  object03.json  object04.json  object05.json  string01.json
tests/integration/: Makefile.am  jso_parser_test.c  jso_pointer_test.c  jso_schema_draft_04_test.c  jso_schema_draft_06_test.c  jso_schema_test.c
tests/manual/: array_001.json  array_003.json  object_001.json  object_002.json  object_basic.json  person_001.json  person_002.json  product_001.json  product_002.json
tests/manual/errors/: array02.json  escape02.json  object01.json  object02.json  object06.json  string02.json  string_end.json
tests/manual/schemas/: array.schema.json  object.schema.json  person.schema.json  product.schema.json
tests/manual/tokens/: esc.js
tests/unit/: Makefile.am  jso_array_test.c  jso_builder_test.c  jso_ht_test.c  jso_object_test.c  jso_string_test.c
tests/unit/pointer/: jso_pointer_test.c
tests/unit/schema/: jso_schema_array_test.c  jso_schema_data_test.c  jso_schema_error_test.c  jso_schema_keyword_array_test.c  jso_schema_keyword_freer_test.c  jso_schema_keyword_object_test.c  jso_schema_keyword_regexp_test.c  jso_schema_keyword_scalar_test.c  jso_schema_keyword_single_test.c  jso_schema_keyword_test.c  jso_schema_keyword_types_test.c  jso_schema_keyword_union_test.c  jso_schema_value_allocator_test.c  jso_schema_value_freer_test.c  jso_schema_value_init_test.c  jso_schema_value_parser_test.c
