AM_CFLAGS = -Wall -std=c11

noinst_LIBRARIES = libjso.a
libjso_a_SOURCES = jso_value.c jso_array.c jso_object.c jso_dg_dtoa.c jso_number.c \
	jso_encoder.c jso_error.c jso_ht.c jso_re.c jso_scanner.c jso_parser.tab.c \
	parser/jso_parser_hooks_decode.c io/jso_io.c io/jso_io_file.c io/jso_io_memory.c \
	schema/jso_schema_array.c schema/jso_schema_data.c schema/jso_schema_error.c  \
	schema/jso_schema_keyword.c schema/jso_schema_keyword_array.c \
	schema/jso_schema_keyword_freer.c schema/jso_schema_keyword_object.c \
	schema/jso_schema_keyword_regexp.c schema/jso_schema_keyword_scalar.c \
	schema/jso_schema_keyword_single.c schema/jso_schema_keyword_types.c \
	schema/jso_schema_keyword_union.c schema/jso_schema_value_freer.c \
	schema/jso_schema_value_init.c schema/jso_schema_value_parser.c \
	schema/jso_schema_version.c schema/jso_schema.c

bin_PROGRAMS = jso
jso_SOURCES =  main.c jso_cli.c
jso_LDADD = libjso.a

include_HEADERS = jso.h jso_types.h jso_value.h jso_array.h jso_object.h jso_dg_dtoa.h \
	jso_bitset.h jso_number.h jso_error.h jso_encoder.h jso_ht.h jso_parser.h jso_parser.tab.h \
	jso_parser_hooks.h jso_mm.h parser/jso_parser_hooks_decode.h jso_scanner.h jso_string.h \
	jso_schema.h schema/jso_schema_array.h schema/jso_schema_data.h schema/jso_schema_error.h  \
	schema/jso_schema_keyword.h schema/jso_schema_keyword_array.h \
	schema/jso_schema_keyword_freer.h schema/jso_schema_keyword_object.h \
	schema/jso_schema_keyword_regexp.h schema/jso_schema_keyword_scalar.h \
	schema/jso_schema_keyword_single.h schema/jso_schema_keyword_types.h \
	schema/jso_schema_keyword_union.h schema/jso_schema_value.h  \
	schema/jso_schema_version.h jso_tokens.h jso_re.h jso_cli.h \
	jso_io.h io/jso_io_file.h io/jso_io_memory.h


jso_scanner.c: jso_scanner.re jso_scanner.h
	$(RE2C) -t jso_scanner_defs.h -bci jso_scanner.re > jso_scanner.c

jso_parser.tab.c jso_parser.tab.h: jso_parser.y jso_parser.h
	$(YACC) --file-prefix=jso_parser -l -d jso_parser.y
